contact section updated

--- a/index.html
+++ b/index.html
@@ -332,7 +332,9 @@
             
           </div>
 
- 
+          <form action="https://api.web3forms.com/submit" method="POST">
+            <input type="hidden" name="access_key" value="22acd546-b1c2-4d09-bef9-41d81b9f70be">
+
           <div class="footer-list">
 
             <p class="footer-list-title">Contact ME</p>
@@ -350,15 +352,14 @@
               <ion-icon name="mail-outline" aria-hidden="true"></ion-icon>
             </div>
 
-            <a href="" class="btn btn-primary">
-              <span class="span">Done</span>
-
+            <button type="submit" class="btn btn-primary">
+              <span class="span">Submit Form</span>
               <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
-            </a>
-
-          </div>
-
+          </button>
+      </div>
         </div>
+      </form>
+
 
         <div class="footer-bottom">
 
