changes in footer aligment section

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 
         <p class="copyright-text">
-          Copyright 2024 © Rishaj - Portfolio.
+          Copyright 2024 © Rishaj - Portfolio.<br>
           Developed by codewithrishaj
         </p>
         
@@ -310,15 +310,15 @@
             </a>
             
             <p class="footer-text">
-              Timing <br>
-        Monday - 9:00am to 7:30pm     IST
-        Tuesday - 9:00am to 7:30pm    IST
-        Wednesday - 9:00am to 7:30pm  IST
-        Thursday - 9:00am to 7:30pm   IST
-        Friday - 9:00am to 6:00pm     IST
-        Saturday - 9:00am to 6:00pm   IST
-        Sunday - 8am to 9pm           IST
-            </p>
+         <p class="footer-list-title">Timming</p>
+        Monday  - 9:00am to 7:30pm    IST<br>
+        Tuesday - 9:00am to 7:30pm    IST<br>
+        Wednesday - 9:00am to 7:30pm  IST<br>
+        Thursday - 9:00am to 7:30pm   IST<br>
+        Friday - 9:00am to 6:00pm     IST<br>
+        Saturday - 9:00am to 6:00pm   IST<br>
+        Sunday - 8:00am to 9:00pm     IST<br>
+        </p>
 
             <p class="footer-list-title">Address</p>
 
