updating work section and adding some images

--- a/index.html
+++ b/index.html
@@ -270,7 +270,42 @@
         <a href="" class="work__img">
               <img src="./assets/images/work6.jpg" alt="">
         </a>
-          
+
+        <a href="" class="work__img">
+          <img src="./assets/images/work7.jpg" alt="">
+        </a>  
+
+        <a href="" class="work__img">
+          <img src="./assets/images/work8.jpg" alt="">
+        </a>
+
+        <a href="" class="work__img">
+          <img src="./assets/images/work9.jpg" alt="">
+        </a>
+
+        <a href="" class="work__img">
+          <img src="./assets/images/work10.jpg" alt="">
+        </a>
+
+        <a href="" class="work__img">
+          <img src="./assets/images/work11.jpg" alt="">
+        </a>
+
+        <a href="" class="work__img">
+          <img src="./assets/images/work12.jpg" alt="">
+        </a>
+
+        <a href="" class="work__img">
+          <img src="./assets/images/work13.jpg" alt="">
+        </a>
+
+        <a href="" class="work__img">
+          <img src="./assets/images/work14.jpg" alt="">
+        </a>
+
+        <a href="" class="work__img">
+          <img src="./assets/images/work15.jpg" alt="">
+        </a>
       </div>
     </section>
 
