updating new image

--- a/index.html
+++ b/index.html
@@ -306,6 +306,10 @@
         <a href="" class="work__img">
           <img src="./assets/images/work15.jpg" alt="">
         </a>
+
+        <a href="" class="work__img">
+          <img src="./assets/images/work16.jpg" alt="">
+        </a>
       </div>
     </section>
 
