--- a/index.html
+++ b/index.html
@@ -310,6 +310,10 @@
         <a href="" class="work__img">
           <img src="./assets/images/work16.jpg" alt="">
         </a>
+
+        <a href="" class="work__img">
+          <img src="./assets/images/work17.jpg" alt="">
+        </a>
       </div>
     </section>
 
