--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         </a>
           
         <a href="" class="work__img">
-              <img src="./assets/images/work4.jpg" alt="">
+              <img src="./assets/images/work18.jpg" alt="">
         </a>
           
 
@@ -313,6 +313,18 @@
 
         <a href="" class="work__img">
           <img src="./assets/images/work17.jpg" alt="">
+        </a>
+
+        <a href="" class="work__img">
+          <img src="./assets/images/work4.jpg" alt="">
+        </a>
+
+        <a href="" class="work__img">
+          <img src="./assets/images/work19.jpg" alt="">
+        </a>
+
+        <a href="" class="work__img">
+          <img src="./assets/images/work20.jpg" alt="">
         </a>
       </div>
     </section>
