--- a/index.html
+++ b/index.html
@@ -326,6 +326,12 @@
         <a href="" class="work__img">
           <img src="./assets/images/work20.jpg" alt="">
         </a>
+        <a href="" class="work__img">
+          <img src="./assets/images/work21.jpg" alt="">
+        </a>
+        <a href="" class="work__img">
+          <img src="./assets/images/work22.jpg" alt="">
+        </a>
       </div>
     </section>
 
