update image no 23

--- a/index.html
+++ b/index.html
@@ -332,6 +332,9 @@
         <a href="" class="work__img">
           <img src="./assets/images/work22.jpg" alt="">
         </a>
+        <a href="" class="work__img">
+          <img src="./assets/images/work23.jpg" alt="">
+        </a>
       </div>
     </section>
 
