update timming part

--- a/index.html
+++ b/index.html
@@ -374,21 +374,16 @@
             </a>
             
             <p class="footer-text">
-         <p class="footer-list-title">Timming</p>
-        Monday  - 9:00am to 7:30pm    IST<br>
-        Tuesday - 9:00am to 7:30pm    IST<br>
-        Wednesday - 9:00am to 7:30pm  IST<br>
-        Thursday - 9:00am to 7:30pm   IST<br>
-        Friday - 9:00am to 6:00pm     IST<br>
-        Saturday - 9:00am to 6:00pm   IST<br>
-        Sunday - 8:00am to 9:00pm     IST<br>
+         <p class="footer-list-title">Timing</p>
+        Mon - Sat:- 9:00am to 7:30pm    IST<br>
+        Sun - 8:00am to 9:00pm     IST<br>
         </p>
 
             <p class="footer-list-title">Address</p>
 
             <address class="footer-text address">
-              Bishnu mandir Rd<br>
-              Maligaon,Guwahati,Assam,781012
+              Bishnu mandir Rd,<br>
+              Maligaon,Guwahati,Assam,781012.
             </address>
             
           </div>
