update resume file

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         
         </nav>
 
-      <a href="./Resume/resume.png" class="btn btn-primary"> Download CV </a>
+      <a href="./Resume/resume.pdf" class="btn btn-primary"> Download CV </a>
 
       <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
         <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
@@ -169,7 +169,7 @@
             
             <div class="input-wrapper">
               <button class="button button--flex">
-                <a href="./Resume/resume.png" class="btn btn-primary"> Download CV </a>
+                <a href="./Resume/resume.pdf" class="btn btn-primary"> Download CV </a>
               </button>
             </div>
     </section>
