update new images

--- a/index.html
+++ b/index.html
@@ -335,6 +335,12 @@
         <a href="" class="work__img">
           <img src="./assets/images/work23.jpg" alt="">
         </a>
+        <a href="" class="work__img">
+          <img src="./assets/images/work24.jpg" alt="">
+        </a>
+        <a href="" class="work__img">
+          <img src="./assets/images/work25.jpg" alt="">
+        </a>
       </div>
     </section>
 
