--- a/index.html
+++ b/index.html
@@ -172,6 +172,12 @@
                 <a href="./Resume/resume.pdf" class="btn btn-primary"> Download CV </a>
               </button>
             </div>
+            <br>
+            <div class="input-wrapper">
+              <button class="button button--flex">
+                <a href="./Resume/RISHAJAPPLY.pdf" class="btn btn-primary"> Achievement </a>
+              </button>
+            </div>
     </section>
 
       <!-- 
