updating the image

--- a/index.html
+++ b/index.html
@@ -354,6 +354,14 @@
           <a href="" class="work__img">
             <img src="./assets/images/work/POST 26.jpg" alt="">
           </a>
+          
+          <a href="" class="work__img">
+            <img src="./assets/images/work/POST 27.png" alt="">
+          </a>
+
+          <a href="" class="work__img">
+            <img src="./assets/images/work/POST 28.png" alt="">
+          </a>
         
       </div>
     </section>
