updating the 29th image

--- a/index.html
+++ b/index.html
@@ -363,6 +363,9 @@
             <img src="./assets/images/work/POST 28.png" alt="">
           </a>
         
+          <a href="" class="work__img">
+            <img src="./assets/images/work/POST 29.jpg" alt="">
+          </a>
       </div>
     </section>
 
