updating the image no 30

--- a/index.html
+++ b/index.html
@@ -366,6 +366,10 @@
           <a href="" class="work__img">
             <img src="./assets/images/work/POST 29.jpg" alt="">
           </a>
+
+          <a href="" class="work__img">
+            <img src="./assets/images/work/POST 30.jpg" alt="">
+          </a>
       </div>
     </section>
 
